# parc-ferme

./: .gitignore  .reviewrc.example.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/parc_ferme/: cli.py  config.py  errors.py  formatter.py  github.py  profiles.py  reviewer.py
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_formatter.py  test_github.py  test_profiles.py  test_reviewer.py
tests/fixtures/: circular_extends.yml  extends_config.yml  invalid_config.yml  invalid_model_config.yml  invalid_timeout_config.yml  negative_timeout_config.yml  timeout_config.yml  valid_config.yml  zero_timeout_config.yml
